--- a/NerdBook/web/M1/bacheca.html
+++ b/NerdBook/web/M1/bacheca.html
@@ -26,39 +26,36 @@ inserite le metainformazioni sulla pagina e validatela
         <nav>
             <a href="login.html">Login</a>
             <a href="profilo.html">Profilo</a>
+            <a href="descrizione.html">Benvenuto</a>
         </nav>
-        <article>
-            <div id="autore">
+
+        <div id="notizie">
+
+            <div>
                 <h3>Djanni</h3>
+                <img title="profilo" alt="foto profilo" src="/data/propic/profile-001.jpg" width="60" height="60">
+                <p>Avevo letto che ci sarebbero stati cookies, dove sono? Ho fame.</p>
             </div>
-            <div id="propic">
-                <img title="profilo" alt="foto profilo"src="profile-001.jpg" width="60" height="60">
-            </div>
-            <p>Avevo letto che ci sarebbero stati cookies, dove sono? Ho fame.</p>
-        </article>
-        <article>
-            <div id="autore">
+
+
+
+            <div>
                 <h3>Djanni</h3>
+                <img title="profilo" alt="foto profilo" src="/data/propic/profile-001.jpg" width="60" height="60">
+                <div>
+                    <img title="profilo" alt="foto profilo" src="/data/shared/immagine-001.jpg" width="200" height="200">
+                </div>
             </div>
-            <div id="propic">
-                <img title="profilo" alt="foto profilo"src="profile-001.jpg" width="60" height="60">
+
+
+
+            <div>
+                <h3>Tizio Caio</h3>
+                <img title="profilo" alt="foto profilo" src="/data/propic/profile-002.jpg" width="60" height="60">
+                <div id="link">
+                    <a href="http://google.com" target=_blank>Link</a>
+                </div>
             </div>
-            <div id="Fotografia">
-                <img title="profilo" alt="foto profilo"src="immagine-001.jpg" width="200" height="200">
-            </div>
-            <p>#relax</p>
-        </article>
-        <article>
-            <div id="autore">
-                <h3>studentedifarmacologia</h3>
-            </div>
-            <div id="propic">
-                <img title="profilo" alt="foto profilo"src="profile-002.jpg" width="60" height="60">
-            </div>
-            <div id="link">
-                <a href="http://google.com" target=_blank>Link</a>
-            </div>
-            <p>Che schifo gli studenti di informatica: non fanno altro che occupare tavoli per giocare e quando gli chiedi di aiutarti ad aggiustare il computer sanno solo mandarti questo link</p>
-        </article>
+        </div>
     </body>
 </html>
