--- a/NerdBook/web/M1/descrizione.html
+++ b/NerdBook/web/M1/descrizione.html
@@ -35,7 +35,7 @@ Inserite le metainformazioni sulla pagina e validatela.
             <a href="bacheca.html">Bacheca</a>
         </nav>
         <div id="decriz">
-            <article>
+            <div>
                 <h2>Cos'è NerdBook?</h2>
 
                 <h3>Nerdbook è il social che ti mette in contatto con persone legate all'ambiente "Nerd" proprio come te.</h3>
@@ -43,21 +43,26 @@ Inserite le metainformazioni sulla pagina e validatela.
                 <p>Sei stanco di vedere il tuo feed riempirsi di foto in discoteca, discussioni calcistiche e imbarazzanti tentativi di approccio con l'altro sesso?</p>
                 <p>NerdBook è il posto che fa per te, unisciti ad una community di persone i cui unici programmi per il venerdì sera si trovano in una cartella del loro disco rigido!</p>
                 <p>Smetti di essere triste e solo! Sii solo triste!</p>
-            </article>
+            </div>
 
-            <article>
+            <div>
                 <h2>Cosa troverò su NerdBook?</h2>
                 <h3>Una community di persone come te</h3>
                 <p>Amanti dell'elettronica, dei videogiochi, programmatori, chiunque si consideri un po' "nerd" o vuole anche solo avvicinarsi a questo mondo è il benvenuto.</p>
                 <p>tante persone con i tuoi stessi interessi con la quale potrai discutere o litigare su qualunque cosa!</p>
-            </article>
+            </div>
 
-            <article>
+            <div>
                 <h2>Cosa potrò fare?</h2>
                 <h3>Quello che ti va!</h3>
                 <p>Conosci nuove persone, crea e gestisci gruppi di dialogo, chiedi aiuto per un problema, recluta beta tester e scambia opinioni con chi vuoi!</p>
                 <p>Oppure insulta persone a caso per divertimento. Non c'è limite a quello che puoi fare!</p>
-            </article>
+            </div>
+            <div>
+                <h2>Quanto mi costerà usufruirne?</h2>
+                <h3>Niente! (o quasi)</h3>
+                <p>Ci sembrava troppo chiedervi di pagare per usare un social dove nessuno vorrebbe essere. Quindi non lo facciamo! Lunico prezzo che pagherai per iscriverti, sarà una buona fetta della tua dignità.</p>
+            </div>
         </div>
     </body>
 </html>
