--- a/NerdBook/web/M1/bacheca.html
+++ b/NerdBook/web/M1/bacheca.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <!--
-inserire una sezione nella pagina bacheca.html che contenga la descrizione di almeno 3 post, che includa: nome dell'utente che ha postato qualcosa, con una foto del suo profilo, il contenuto del post. I tre post si differenziano in questo modo: il primo non ha allegati, il secondo ha come allegato un'immagine, il terzo ha come allegato un link.
+Task 5
+Inserite una sezione nella pagina bacheca.html che contenga la descrizione di almeno 3 post, che includa: nome dell’utente che ha postato qualcosa, con una foto del suo profilo, il contenuto del post. I tre post si differenziano in questo modo: il primo non ha allegati, il secondo ha come allegato un’immagine, il terzo ha come allegato un link. 
 
-create una sezione di navigazione che permetta di raggiungere la pagina descrizione.html e login.html
+Create una sezione di navigazione che permetta di raggiungere la pagina descrizione.html e login.html.
 
-inserite le metainformazioni sulla pagina e validatela
+Inserite le metainformazioni sulla pagina e validatela.
 -->
 <html>
     <head>
@@ -32,8 +33,8 @@ inserite le metainformazioni sulla pagina e validatela
         <div id="notizie">
 
             <div>
-                <h3>Djanni</h3>
-                <img title="profilo" alt="foto profilo" src="/data/propic/profile-001.jpg" width="60" height="60">
+                <h3>Gabe Newell</h3>
+                <img title="profilo" alt="foto profilo" src="./data/propic/profile-000.jpg" width="60" height="60">
                 <p>Avevo letto che ci sarebbero stati cookies, dove sono? Ho fame.</p>
             </div>
 
@@ -41,19 +42,19 @@ inserite le metainformazioni sulla pagina e validatela
 
             <div>
                 <h3>Djanni</h3>
-                <img title="profilo" alt="foto profilo" src="/data/propic/profile-001.jpg" width="60" height="60">
+                <img title="profilo" alt="foto profilo" src="./data/propic/profile-001.jpg" width="60" height="60">
                 <div>
-                    <img title="profilo" alt="foto profilo" src="/data/shared/immagine-001.jpg" width="200" height="200">
+                    <img title="profilo" alt="foto profilo" src="./data/shared/immagine-000.jpg" width="200" height="200">
                 </div>
             </div>
 
 
 
             <div>
-                <h3>Tizio Caio</h3>
-                <img title="profilo" alt="foto profilo" src="/data/propic/profile-002.jpg" width="60" height="60">
+                <h3>Mark Zuckerberg</h3>
+                <img title="profilo" alt="foto profilo" src="./data/propic/profile-002.jpg" width="60" height="60">
                 <div id="link">
-                    <a href="http://google.com" target=_blank>Link</a>
+                    <a href="http://facebook.com" target=_blank>Link</a>
                 </div>
             </div>
         </div>
