--- a/NerdBook/web/M1/descrizione.html
+++ b/NerdBook/web/M1/descrizione.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <!--
-Task 3
-Inserire all’interno della pagina descrizione.html una breve descrizione del social network:
-a chi sia rivolto, come iscriversi, se sia gratis o a pagamento. 
-Non è molto importante quello che scriverete, 
-dovete creare un testo con una gerarchia di sezioni e titoli, che arrivi almeno al livello h3. 
-Inserite un sommario con link interni alle sezioni all’inizio della pagina. 
+nserire all’interno della pagina descrizione.html una breve descrizione del social network: a chi sia rivolto, come iscriversi, se sia gratis o a pagamento. Non è molto importante quello che scriverete, dovete creare un testo con una gerarchia di sezioni e titoli, che arrivi almeno al livello h3. Inserite un sommario con link interni alle sezioni all’inizio della pagina. 
 
 Create una sezione di navigazione che permetta di raggiungere la pagina login.html. 
 
@@ -40,7 +35,7 @@ Inserite le metainformazioni sulla pagina e validatela.
 
                 <h3>Nerdbook è il social che ti mette in contatto con persone legate all'ambiente "Nerd" proprio come te.</h3>
 
-                <p>Sei stanco di vedere il tuo feed riempirsi di foto in discoteca, discussioni calcistiche e imbarazzanti tentativi di approccio con l'altro sesso?</p>
+                <p>Sei stanco di vedere il tuo feed riempirsi di foto in discoteca, discussioni calcistiche e imbarazzanti tentativi di approccio con l'altro sesso</p>
                 <p>NerdBook è il posto che fa per te, unisciti ad una community di persone i cui unici programmi per il venerdì sera si trovano in una cartella del loro disco rigido!</p>
                 <p>Smetti di essere triste e solo! Sii solo triste!</p>
             </div>
