--- a/NerdBook/web/M1/login.html
+++ b/NerdBook/web/M1/login.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <!--
-Inserire all'interno della pagina di login.html un form per richiedere username e password all'utente, utilizzando i campi di input corretti
+Task 4
+Inserire all’interno della pagina di login.html un form per richiedere username e password all’utente, utilizzando i campi di input corretti. 
 
-Create una sezione di navigazione che permetta du raggiungere la pagina descrizione.html, profilo.html e bacheca.html
+Create una sezione di navigazione che permetta di raggiungere la pagina descrizione.html, profilo.html e bacheca.html.
 
-inserite le metainformazioni sulla pagina e validatela
+Inserite le metainformazioni sulla pagina e validatela. 
 -->
 
 <html>
@@ -29,11 +30,12 @@ inserite le metainformazioni sulla pagina e validatela
             <a href="profilo.html">Profilo</a>
             <a href="descrizione.html">Benvenuto</a>
         </nav>
-        <form action="login.asp" method="get">
-            <label for="username">Username:</label>
-            <input type="text" name="username"id="username" value="inserisci l'username..." />
-            <label for="password">Password</label>
-            <input type="password" name="password"id="password" value=""/>
+        <form action = "login.asp" method = "post">
+            <label for = "username">Username:</label>
+            <input type = "text" name="username" id = "username" value = "inserisci l'username..." />
+            <br/>
+            <label for = "password">Password</label>
+            <input type = "password" name="password" id = "password" value = ""/>
         </form>
     </body>
 </html>
