--- a/NerdBook/web/M1/profilo.html
+++ b/NerdBook/web/M1/profilo.html
@@ -52,7 +52,7 @@ Conferma password
             <br/>
             <div>
                 <label for="bio">frase di presentazione</label>
-                <textarea rows="6" cols="21" name= "bio" id= "bio"></textarea>
+                <textarea rows="6" cols="21" name= "bio" id= "bio">Scrivi qui</textarea>
             </div>
             <br/>
             <div>
