--- a/NerdBook/web/M1/descrizione.html
+++ b/NerdBook/web/M1/descrizione.html
@@ -7,7 +7,7 @@ Create una sezione di navigazione che permetta di raggiungere la pagina login.ht
 Inserite le metainformazioni sulla pagina e validatela. 
 -->
 
-<html>
+<html lang="it">
     <head>
         <title>Cos'è NerdBook?</title>
         <meta charset="UTF-8">
@@ -28,9 +28,18 @@ Inserite le metainformazioni sulla pagina e validatela.
             <a href="login.html">Login</a>
             <a href="profilo.html">Profilo</a>
             <a href="bacheca.html">Bacheca</a>
+            
+            <ol>
+                <li><a href="#parte1">Cos'è Nerdbook?</a></li>
+                <li><a href="#parte2">Cosa troverò su Nerdbook?</a></li>
+                <li><a href="#parte3">Cosa potrò fare?</a></li>
+                <li><a href="#parte3">Costi</a></li>
+            </ol>
+
+            
         </nav>
         <div id="decriz">
-            <div>
+            <div id="parte1">
                 <h2>Cos'è NerdBook?</h2>
 
                 <h3>Nerdbook è il social che ti mette in contatto con persone legate all'ambiente "Nerd" proprio come te.</h3>
@@ -40,23 +49,23 @@ Inserite le metainformazioni sulla pagina e validatela.
                 <p>Smetti di essere triste e solo! Sii solo triste!</p>
             </div>
 
-            <div>
+            <div id="parte2">
                 <h2>Cosa troverò su NerdBook?</h2>
                 <h3>Una community di persone come te</h3>
                 <p>Amanti dell'elettronica, dei videogiochi, programmatori, chiunque si consideri un po' "nerd" o vuole anche solo avvicinarsi a questo mondo è il benvenuto.</p>
                 <p>tante persone con i tuoi stessi interessi con la quale potrai discutere o litigare su qualunque cosa!</p>
             </div>
 
-            <div>
+            <div id="parte3">
                 <h2>Cosa potrò fare?</h2>
                 <h3>Quello che ti va!</h3>
                 <p>Conosci nuove persone, crea e gestisci gruppi di dialogo, chiedi aiuto per un problema, recluta beta tester e scambia opinioni con chi vuoi!</p>
                 <p>Oppure insulta persone a caso per divertimento. Non c'è limite a quello che puoi fare!</p>
-            </div>
-            <div>
+            </div >
+            <div id="parte4">
                 <h2>Quanto mi costerà usufruirne?</h2>
                 <h3>Niente! (o quasi)</h3>
-                <p>Ci sembrava troppo chiedervi di pagare per usare un social dove nessuno vorrebbe essere. Quindi non lo facciamo! Lunico prezzo che pagherai per iscriverti, sarà una buona fetta della tua dignità.</p>
+                <p>Ci sembrava troppo chiedervi di pagare per usare un social dove nessuno vorrebbe essere. Quindi non lo facciamo! L'unico prezzo che pagherai per iscriverti, sarà una buona fetta della tua dignità.</p>
             </div>
         </div>
     </body>
