--- a/NerdBook/web/M1/descrizione.html
+++ b/NerdBook/web/M1/descrizione.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-nserire all’interno della pagina descrizione.html una breve descrizione del social network: a chi sia rivolto, come iscriversi, se sia gratis o a pagamento. Non è molto importante quello che scriverete, dovete creare un testo con una gerarchia di sezioni e titoli, che arrivi almeno al livello h3. Inserite un sommario con link interni alle sezioni all’inizio della pagina. 
+Inserire all’interno della pagina descrizione.html una breve descrizione del social network: a chi sia rivolto, come iscriversi, se sia gratis o a pagamento. Non è molto importante quello che scriverete, dovete creare un testo con una gerarchia di sezioni e titoli, che arrivi almeno al livello h3. Inserite un sommario con link interni alle sezioni all’inizio della pagina. 
 
 Create una sezione di navigazione che permetta di raggiungere la pagina login.html. 
 
