--- a/NerdBook/web/M1/descrizione.html
+++ b/NerdBook/web/M1/descrizione.html
@@ -64,7 +64,7 @@ Inserite le metainformazioni sulla pagina e validatela.
             </div >
             <div id="parte4">
                 <h2>Quanto mi costerà usufruirne?</h2>
-                <h3>Niente! (o quasi)</h3>
+                <h3>Niente! (più o meno)</h3>
                 <p>Ci sembrava troppo chiedervi di pagare per usare un social dove nessuno vorrebbe essere. Quindi non lo facciamo! L'unico prezzo che pagherai per iscriverti, sarà una buona fetta della tua dignità.</p>
             </div>
         </div>
