--- a/NerdBook/web/M1/descrizione.html
+++ b/NerdBook/web/M1/descrizione.html
@@ -20,10 +20,12 @@ Inserite le metainformazioni sulla pagina e validatela.
               content="info social nerd programmazione">
     </head>
     <body>
-        <div id="header">
-            <h1>NerdBook</h1>
-            <p>Tutte le informazioni che NON volevi sapere</p>
-        </div>
+        <header>
+            <div id="title">
+                <h1>NerdBook</h1>
+                <p>Tutte le informazioni che NON volevi sapere</p>
+            </div>
+        </header>
         <nav>
             <a href="login.html">Login</a>
             <a href="profilo.html">Profilo</a>
