--- a/NerdBook/web/M1/login.html
+++ b/NerdBook/web/M1/login.html
@@ -21,10 +21,12 @@ Inserite le metainformazioni sulla pagina e validatela.
               content="info social nerd programmazione login">
     </head>
     <body>
-        <div id="header">
-            <h1>NerdBook</h1>
-            <p>Il social asociale</p>
-        </div>
+        <header>
+            <div id = "header">
+                <h1>NerdBook</h1>
+                <p>Il social asociale</p>
+            </div>
+        </header>
         <nav>
             <a href="bacheca.html">Home</a>
             <a href="profilo.html">Profilo</a>
