--- a/NerdBook/web/M1/profilo.html
+++ b/NerdBook/web/M1/profilo.html
@@ -24,11 +24,12 @@ Conferma password
               content="info social nerd ">
     </head>
     <body>
-        <div id="header">
-
-            <h1>NerdBook</h1>
-            <p>Il social asociale</p>
-        </div>
+        <header>
+            <div = "title">
+                <h1>NerdBook</h1>
+                <p>Il social asociale</p>
+            </div>
+        </header>
         <nav>
             <a href="login.html">Login</a>
             <a href="bacheca.html">Home</a>
